tests/baselines/reference/declarationEmitThisPredicatesWithPrivateName01.errors.txt
tests/cases/conformance/declarationEmit/typePredicates/declarationEmitThisPredicatesWithPrivateName01.ts(2,18): error TS4055: Return type of public method from exported class has or is using private name 'D'.


==== tests/cases/conformance/declarationEmit/typePredicates/declarationEmitThisPredicatesWithPrivateName01.ts (1 errors) ====
    export class C {
        m(): this is D {
                     ~
!!! error TS4055: Return type of public method from exported class has or is using private name 'D'.
            return this instanceof D;
        }
    }
    
    class D extends C {
    }